--- a/Introduction-Html/personal-website/css/styles.css
+++ b/Introduction-Html/personal-website/css/styles.css
@@ -1,6 +1,11 @@
 body {
     background-color: powderblue !important;
   }
+  h1{
+    color: #66bfbf;
+  }
+  h3{
+    color: #66bfbf;
   hr {
     border-style: dotted none none;
     border-color: grey;
